Updated 'support/cavalier-club/index.html' via CloudCannon

--- a/support/cavalier-club/index.html
+++ b/support/cavalier-club/index.html
@@ -36,7 +36,7 @@ title: Cavalier Club
             Cavalier Club
         </h2><br />
         <div class="editable">
-            <p class="main-heading"><strong></strong>The Cavalier Club promotes and supports Kankakee Community College athletic programs and encourages the involvement of the entire Community College District 520. The club sponsors fundraising events each year. Proceeds help support all KCC athletic programs:</p>
+            <p>The Cavalier Club promotes and supports Kankakee Community College athletic programs and encourages the involvement of the entire Community College District 520. The club sponsors fundraising events each year. Proceeds help support all KCC athletic programs:</p>
             <div>
                 <ul>
                     <li>a fall membership drive</li>
@@ -44,8 +44,8 @@ title: Cavalier Club
                 </ul>
                 <p>You can be a member of the team! Your support helps build and sustain athletic programs at KCC. No matter your level of giving, you are contributing to the development of champions--on the field, in the classroom, in the community.</p>
             </div>
-            <h2 class="main-heading"><strong>Membership levels and benefits</strong></h2>
-            <h2 class="main-heading">Platinum &ndash; $1,000 and ​above</h2>
+            <h5>Membership levels and benefits</h5>
+            <h5>Platinum &ndash; $1,000 and ​above</h5>
             <div>
                 <ul>
                     <li>10 season passes to all KCC athletic events</li>
@@ -54,7 +54,7 @@ title: Cavalier Club
                     <li>FREE Cash Bash Ticket</li>
                 </ul>
             </div>
-            <h2 class="main-heading">Gold &ndash; $500</h2>
+            <h5>Gold &ndash; $500</h5>
             <div>
                 <ul>
                     <li>8 season passes to all KCC athletic events</li>
@@ -62,7 +62,7 @@ title: Cavalier Club
                     <li>KCC polo and hat</li>
                 </ul>
             </div>
-            <h2 class="main-heading">Red &ndash; $250</h2>
+            <h5>Red &ndash; $250</h5>
             <div>
                 <ul>
                     <li>5 season passes to all KCC athletic events</li>
@@ -70,16 +70,16 @@ title: Cavalier Club
                     <li>KCC hat and T-shirt</li>
                 </ul>
             </div>
-            <h2 class="main-heading">Blue &ndash; $100</h2>
+            <h5>Blue &ndash; $100</h5>
             <div>
                 <ul>
                     <li>Two season passes to all KCC athletic events</li>
                     <li>Name listed in team guide and KCC website</li>
                     <li>KCC hat</li>
                 </ul>
-                <p>For more information about the Cavalier Club, phone Todd Post, athletics director, at 802-8616 or email tpost@kcc.edu.</p>
+                <p>For more information about the Cavalier Club, phone Todd Post, athletics director, at 802-8616 or email <a href="mailto:tpost@kcc.edu">tpost@kcc.edu</a>.</p>
             </div>
-            <h2 class="main-heading"><strong>Cavalier Club Members</strong></h2>
+            <h5>Cavalier Club Members</h5>
             <div>
                 <p>The players and coaches of the 2017-18 Cavaliers athletic program wish to extend sincere thanks to the following people and businesses who have helped support the athletic program at KCC. We appreciate your donations and hope to give you in return a great season of collegiate athletics.</p>
             </div>
