Updated 'support/cavalier-club/index.html' via CloudCannon

--- a/support/cavalier-club/index.html
+++ b/support/cavalier-club/index.html
@@ -39,8 +39,12 @@ title: Cavalier Club
             <p>The Cavalier Club promotes and supports Kankakee Community College athletic programs and encourages the involvement of the entire Community College District 520. The club sponsors fundraising events each year. Proceeds help support all KCC athletic programs:</p>
             <div>
                 <ul>
-                    <li>a fall membership drive</li>
-                    <li>the Cash Bash held in February</li>
+                    <li>
+                        <p>a fall membership drive</p>
+                    </li>
+                    <li>
+                        <p>the Cash Bash held in February</p>
+                    </li>
                 </ul>
                 <p>You can be a member of the team! Your support helps build and sustain athletic programs at KCC. No matter your level of giving, you are contributing to the development of champions--on the field, in the classroom, in the community.</p>
             </div>
@@ -48,34 +52,60 @@ title: Cavalier Club
             <h5>Platinum &ndash; $1,000 and ​above</h5>
             <div>
                 <ul>
-                    <li>10 season passes to all KCC athletic events</li>
-                    <li>Business listed in team guide, KCC website and gymnasium</li>
-                    <li>KCC fleece and hat</li>
-                    <li>FREE Cash Bash Ticket</li>
+                    <li>
+                        <p>10 season passes to all KCC athletic events</p>
+                    </li>
+                    <li>
+                        <p>Business listed in team guide, KCC website and gymnasium</p>
+                    </li>
+                    <li>
+                        <p>KCC fleece and hat</p>
+                    </li>
+                    <li>
+                        <p>FREE Cash Bash Ticket</p>
+                    </li>
                 </ul>
             </div>
             <h5>Gold &ndash; $500</h5>
             <div>
                 <ul>
-                    <li>8 season passes to all KCC athletic events</li>
-                    <li>Name listed in team guide and KCC website</li>
-                    <li>KCC polo and hat</li>
+                    <li>
+                        <p>8 season passes to all KCC athletic events</p>
+                    </li>
+                    <li>
+                        <p>Name listed in team guide and KCC website</p>
+                    </li>
+                    <li>
+                        <p>KCC polo and hat</p>
+                    </li>
                 </ul>
             </div>
             <h5>Red &ndash; $250</h5>
             <div>
                 <ul>
-                    <li>5 season passes to all KCC athletic events</li>
-                    <li>Name listed in team guide and KCC website</li>
-                    <li>KCC hat and T-shirt</li>
+                    <li>
+                        <p>5 season passes to all KCC athletic events</p>
+                    </li>
+                    <li>
+                        <p>Name listed in team guide and KCC website</p>
+                    </li>
+                    <li>
+                        <p>KCC hat and T-shirt</p>
+                    </li>
                 </ul>
             </div>
             <h5>Blue &ndash; $100</h5>
             <div>
                 <ul>
-                    <li>Two season passes to all KCC athletic events</li>
-                    <li>Name listed in team guide and KCC website</li>
-                    <li>KCC hat</li>
+                    <li>
+                        <p>Two season passes to all KCC athletic events</p>
+                    </li>
+                    <li>
+                        <p>Name listed in team guide and KCC website</p>
+                    </li>
+                    <li>
+                        <p>KCC hat</p>
+                    </li>
                 </ul>
                 <p>For more information about the Cavalier Club, phone Todd Post, athletics director, at 802-8616 or email <a href="mailto:tpost@kcc.edu">tpost@kcc.edu</a>.</p>
             </div>
