Updated 'facilities/sports-facilities/index.html' via CloudCannon

--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -60,7 +60,7 @@ title: Sports Facilities
       <div class="col-md-8">
         <h2 id="softball-field" name="softball-field" class="blue-heading link__offset">Softball Field</h2>
         <p class="editable">The Cavalier softball field is one of the finest facilities in community college softball.</p>
-        <p class="editable">What sets this field apart from others is the hitting background. It consist of two rows of pine trees that give the hitter an excellent view of the ball and is very esthetic for the softball fan.</p>
+        <p class="editable">What sets this field apart from others is the hitting background. It consist of two rows of pine trees that give the hitter an excellent view of the ball and is a pleasing backdrop for the softball fan.</p>
         <p class="editable">Recent additions to the facility include an extensive scoreboard, spacious dugouts with a press box, underground watering system, outfield fence and bleachers seating for 110 Cavalier fans!</p>
         <p class="editable">The outfield fences are measured at 205 feet. The KCC softball field is located at the south-east corner of campus with ample parking.</p>
       </div>
