Fix typo in "Support Athletics" heading

--- a/support.html
+++ b/support.html
@@ -20,6 +20,9 @@ title: Support Athletics
         <li class="nav-item">
           <a href="{{page.baseurl}}{{page.base}}/cavalier-club" class="nav-link sub-nav-link">Cavalier Club</a>
         </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}{{page.base}}/donate" class="nav-link sub-nav-link">Donate</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -37,7 +40,7 @@ title: Support Athletics
             <p>There are a variety of ways you can contribute:</p>
             <p><a href="/support/cash-bash/">Cash Bash</a><br /><a href="/support/cavalier-club/">Cavalier Club</a></p>
         </div>
-      
+
       <!--
       <h2 class="main-heading editable"><strong>Cavalier Club</strong></h2>
       <div class="editable">
