--- a/support/donate/index.html
+++ b/support/donate/index.html
@@ -10,7 +10,7 @@ title: Donate
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-4 text-center">
-      <h1 class="page-heading long-heading">Support KCC Athetics</h1>
+      <h1 class="page-heading long-heading">Support KCC Athletics</h1>
     </div>
     <div class="col-md-8">
       <ul class="nav justify-content-center">
@@ -35,9 +35,9 @@ title: Donate
         <h2 class="blue-heading editable">Donate</h2><br>
         <div class="editable">
           <p>We appreciate your donations and hope to give you in return a great season of collegiate athletics.</p>
-          
+
           <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://51743.thankyou4caring.org/page.aspx?pid=298"target=”_blank”>Donate to Athletics</a></div>
-          
+
         </div>
       </div>
     </div>
