--- a/support/cash-bash/index.html
+++ b/support/cash-bash/index.html
@@ -10,7 +10,7 @@ title: Cash Bash
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-4 text-center">
-      <h1 class="page-heading long-heading">Support KCC Athetics</h1>
+      <h1 class="page-heading long-heading">Support KCC Athletics</h1>
     </div>
     <div class="col-md-8">
       <ul class="nav justify-content-center">
