--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -109,10 +109,16 @@ title: Fitness Center
                 </tbody>
             </table>
             <p>&nbsp;</p>
-            <p>Student options</p>
+            <h5>Student Options</h5>
             <p>KCC students can choose to:</p>
-            <p>sign up as a member</p>
-            <p>enroll in the fitness center course and earn college credit</p>
+            <ul>
+                <li>
+                    <p>sign up as a member</p>
+                </li>
+                <li>
+                    <p>enroll in the fitness center course and earn college credit</p>
+                </li>
+            </ul>
             <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
                 <tbody>
                     <tr class="mv-TableHeaderRow-6">
@@ -135,36 +141,71 @@ title: Fitness Center
                 </tbody>
             </table>
             <p>&nbsp;</p>
-            <p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
+            <h5>Fitness Center for College Credit</h5>
+            <p>You can earn college credit for working out. Your workout schedule is up to you. After an initial orientation, there are no set meeting times. Work out as often as you'd like.</p>
+            <p>Cost</p>
+            <p>The Fitness Center class is the cost of one semester of college credit plus a $20 course fee.</p>
+            <p>Semesters are:</p>
+            <p>Fall: August - December</p>
+            <p>Spring: January - May</p>
+            <p>Summer: June - July</p>
+            <p>High school students earn college credit</p>
+            <p>For high school students, Fitness Center credits can be held in escrow until you graduate, then the credits can be applied as college credits at KCC or another college.</p>
+            <p>Registration</p>
+            <p>To join, register and pay at KCC's Department of Student Services, Riverfront Campus, 100 College Drive, Kankakee, Illinois.</p>
+            <p>First-time registration</p>
+            <p>Students enrolling in the Fitness Center course for the first time must schedule an assessment and orientation session. Contact the Fitness Center at 802-8610 to make an appointment.</p>
+            <p>Orientations usually begin about a week before the semester begins and must be complete before using the Fitness Center. To be considered enrolled in the course, students must begin Fitness Center sessions within the first week of the semester start date.</p>
+            <p>To re-enroll, <a target="_blank" href="/uploads/fitnesscenter-re-enroll.pdf">complete the re-enrollment form </a>(either online or by filling out a printed copy), print and bring with you when you register. Forms are also available in the Fitness Center and Student Services Department.</p>
+            <p>Personal fitness assessment and orientation</p>
+            <p>After you have registered, schedule your 60-minute orientation by phoning 815-802-8610 or stopping by the Fitness Center. Orientation times are 8:30 a.m., 10:30 a.m., 4 p.m. and 5:30 p.m.</p>
+            <p>A member of the Fitness Center staff will take you through a fitness assessment which includes: girth, height, weight, resting heart rate and body fat composition.</p>
+            <p>You will receive a tour of the Fitness Center and locker rooms along with an explanation of our 21 Life Fitness cable-assisted lifting machines.</p>
+            <p>Please allow 60 minutes for the assessment and orientation. The orientation counts toward your fitness center grade.</p>
+            <p>Grades</p>
+            <p>At registration you are asked to choose one of the following grade options:</p>
+            <p>Pass/Fail - to pass, complete 20 hours of exercise throughout the semester</p>
+            <p>Traditional letter grade - to receive an A, complete 25 hours or more of exercise throughout the semester</p>
+            <p>Your grade is based on the option you choose and the amount of time you exercise throughout the semester.</p>
+            <p>A - 25 hours or more</p>
+            <p>B - 22-24:59 hours</p>
+            <p>C - 20-21:59 hours</p>
+            <p>D - 17-19:59 hours</p>
+            <p>F - 16:59 hours or less</p>
             <p>&nbsp;</p>
             <h2 id="personal-trainers" name="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h2>
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
-            <p><img src="/uploads/dsc-0173-home.jpg" width="655" height="250" /></p>
+            <p><img width="655" height="250" src="/uploads/dsc-0173-home.jpg" /></p>
             <h5>Rates</h5>
             <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
-
             <table class="mv-Table-6" cellspacing="0" bordercolor="#808080" border="1">
-              <tbody>
-                <tr class="mv-TableHeaderRow-6"><th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​No. of Persons</th>
-                  <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​1 session</th>
-                  <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​5 sessions</th>
-                  <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​10 sessions</th></tr>
-                  <tr class="mv-TableOddRow-6"><td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​1</td>
-                    <td class="mv-TableOddCol-6">​$30</td>
-                    <td class="mv-TableEvenCol-6">$135​</td>
-                    <td class="mv-TableOddCol-6" colspan="1">$260​</td>
-                  </tr>
-                  <tr class="mv-TableEvenRow-6"><td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​2</td>
-                    <td class="mv-TableOddCol-6">​$25/person</td>
-                    <td class="mv-TableEvenCol-6">$110/person​</td>
-                    <td class="mv-TableOddCol-6" colspan="1">​$210/person</td></tr>
-                  <tr class="mv-TableOddRow-6"><td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​3</td>
-                    <td class="mv-TableOddCol-6">​$20/person</td>
-                    <td class="mv-TableEvenCol-6">​$85/person</td>
-                    <td class="mv-TableOddCol-6" colspan="1">​$160/person</td>
-                  </tr>
+                <tbody>
+                    <tr class="mv-TableHeaderRow-6">
+                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​No. of Persons</th>
+                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​1 session</th>
+                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​5 sessions</th>
+                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​10 sessions</th>
+                    </tr>
+                    <tr class="mv-TableOddRow-6">
+                        <td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​1</td>
+                        <td class="mv-TableOddCol-6">​$30</td>
+                        <td class="mv-TableEvenCol-6">$135​</td>
+                        <td class="mv-TableOddCol-6" colspan="1">$260​</td>
+                    </tr>
+                    <tr class="mv-TableEvenRow-6">
+                        <td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​2</td>
+                        <td class="mv-TableOddCol-6">​$25/person</td>
+                        <td class="mv-TableEvenCol-6">$110/person​</td>
+                        <td class="mv-TableOddCol-6" colspan="1">​$210/person</td>
+                    </tr>
+                    <tr class="mv-TableOddRow-6">
+                        <td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​3</td>
+                        <td class="mv-TableOddCol-6">​$20/person</td>
+                        <td class="mv-TableEvenCol-6">​$85/person</td>
+                        <td class="mv-TableOddCol-6" colspan="1">​$160/person</td>
+                    </tr>
                 </tbody>
-              </table>
+            </table>
             <p>&nbsp;</p>
             <h5><strong>Why Personal Training?</strong></h5>
             <p>Using a personal trainer will help you maximize your time and effort at the gym, giving you tremendous value.</p>
@@ -183,16 +224,15 @@ title: Fitness Center
             <p><strong>Yvonne Mills </strong>&nbsp;</p>
             <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
             <p>Yvonne earned a bachelor&rsquo;s degree in physical education from Olivet Nazarene University.</p>
-            <p>815-802-8610<br />ymills@kcc.edu</p>
+            <p>815-802-8610<br /><a href="mailto:ymills@kcc.edu">ymills@kcc.edu</a></p>
             <p>&nbsp;</p>
-            <p>Fitness specialists</p>
             <p><img width="120" height="140" src="/uploads/candice-brackett-bio-page-2.jpg" /></p>
             <p><strong>​Candice Brackett</strong></p>
-            <p>Fitness specialist, athletic trainer<br />815-802-8610<br />cbrackett@kcc.edu</p>
+            <p>Fitness specialist, athletic trainer<br />815-802-8610<br /><a href="mailto:cbrackett@kcc.edu">cbrackett@kcc.edu</a></p>
             <p>&nbsp;</p>
             <p><img width="120" height="142" src="/uploads/dsc-0248-francine.jpg" /></p>
             <p><strong>Francine Castongia</strong></p>
-            <p>Fitness specialist<br />815-802-8610<br />fcastongia@kcc.edu</p>
+            <p>Fitness specialist<br />815-802-8610<br /><a href="mailto:fcastongia@kcc.edu">fcastongia@kcc.edu</a></p>
             <p>&nbsp;</p>
             <h2 id="testimonials" name="testimonials" class="blue-heading link__offset">Testimonials</h2>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
