Updated 'about/student-athletes/index.html' via CloudCannon

--- a/about/student-athletes/index.html
+++ b/about/student-athletes/index.html
@@ -35,7 +35,7 @@ title: Student-Athlete Experience
             <p>In addition to the computer lab and study table time, students also have access to free tutoring and study skills workshops--services that are available free of charge to all currently enrolled KCC students.</p>
             <p>Post stressed that the culture of achievement for student-athletes starts at the top with KCC President John Avendano, Ph.D.</p>
             <p>&ldquo;As much as Dr. Avendano enjoys athletics and loves to win, he wants students to win in the classroom first,&rdquo; said Post. &ldquo;Classroom success results in a stronger program, a stronger athlete and individual, which results in a stronger community.&rdquo;</p>
-            <p>Funding for the computer lab came from the 2013 and 2014 Cavaliers Classic Golf Outing, an event co-sponsored with the KCC Foundation. To learn more about how KCC athletics are supported, visit the Donate page.</p>
+            <p>Funding for the computer lab came from the 2013 and 2014 Cavaliers Classic Golf Outing, an event co-sponsored with the KCC Foundation. To learn more about how KCC athletics are supported, visit the <a href="/support/donate/">Donate page</a>.</p>
         </div>
       </div>
     </div>
