--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -4,61 +4,24 @@ baseurl: ../../
 base: about
 title: Staff
 ---
+
 {% include about-nav.html %}
 <main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="blue-heading editable">Staff Directory</h2><br>
+        <h2 class="blue-heading editable">Staff Directory</h2><br />
         <div class="editable">
-          <p>Staff</p>
-          <p>Todd Post<br>
-          Athletic Director/Head Baseball Coach<br>
-          815-802-8616<br>
-          tpost@kcc.edu</p><br>
-
-          <p>Donnie Denson<br>
-          Assistant Athletic ​Director/Fitness Center Supervisor<br>
-          Head Women's Basketball Coach<br>
-          815-802-8614 / 815-802-8610<br>
-          ddenson@kcc.edu​</p><br>
-
-          <p>Keith Cooper<br>
-          Head Softball Coach<br>
-          815-802-8606<br>
-          kcooper@kcc.edu</p><br>
-
-
-          <p>Alex Thorson<br>
-          Head Men's Basketball Coach<br>
-          815-802-8609<br>
-          athorson@kcc.edu</p><br>
-
-
-          <p>Michael Barclay<br>
-          Head Soccer Coach<br>
-          815-802-8618<br>
-          mbarclay@kcc.edu</p><br>
-
-          <p>Stephenee Yancy<br>
-          Head Women's Volleyball Coach<br>
-          815-802-8608<br>
-          syancy@kcc.edu</p><br>
-
-          <p>Candice Brackett<br>
-          Athletic Trainer<br>
-          815-802-8617<br>
-          cbrackett@kcc.edu</p><br>
-
-          <p>Bryce Shafer<br>
-          Academic Success/Assistant Baseball Coach<br>
-          815-802-8613<br>
-          bshafer@kcc.edu</p><br>
-
-          <p>Felicia St. John<br>
-          Administrative Assistant<br>
-          815-802-8604<br>
-          fstjohn@kcc.edu</p><br>
+            <p><strong>Todd Post</strong><br />Athletic Director/Head Baseball Coach<br />815-802-8616<br /><a href="mailto:tpost@kcc.edu">tpost@kcc.edu</a></p>
+            <p><strong>Donnie Denson</strong><br />Assistant Athletic ​Director/Fitness Center Supervisor<br />Head Women's Basketball Coach<br />815-802-8614 / 815-802-8610<br /><a href="mailto:ddenson@kcc.edu">ddenson@kcc.edu​</a></p>
+            <p><strong>Keith Cooper</strong><br />Head Softball Coach<br />815-802-8606<br /><a href="mailto:kcooper@kcc.edu">kcooper@kcc.edu</a></p>
+            <p><strong>Alex Thorson</strong><br />Head Men's Basketball Coach<br />815-802-8609<br /><a href="mailto:athorson@kcc.edu">athorson@kcc.edu</a></p>
+            <p><strong>Michael Barclay</strong><br />Head Soccer Coach<br />815-802-8618<br /><a href="mailto:mbarclay@kcc.edu">mbarclay@kcc.edu</a></p>
+            <p><strong>Stephenee Yancy</strong><br />Head Women's Volleyball Coach<br />815-802-8608<br /><a href="mailto:syancy@kcc.edu">syancy@kcc.edu</a></p>
+            <p><strong>Candice Brackett</strong><br />Athletic Trainer<br />815-802-8617<br /><a href="mailto:cbrackett@kcc.edu">cbrackett@kcc.edu</a></p>
+            <p><strong>Bryce Shafer</strong><br />Academic Success/Assistant Baseball Coach<br />815-802-8613<br /><a href="mailto:bshafer@kcc.edu">bshafer@kcc.edu</a></p>
+            <p><strong>Felicia St. John</strong><br />Administrative Assistant<br />815-802-8604<br /><a href="mailto:fstjohn@kcc.edu">fstjohn@kcc.edu</a></p>
+            <p>&nbsp;</p>
         </div>
       </div>
     </div>
