Create descriptions for each page in YAML front-matter ...
Each page needs a unique description and is pulled from front-matter into the <head>
Add _comment: for CMS helper text of "description" field

--- a/about/equity/index.html
+++ b/about/equity/index.html
@@ -3,6 +3,7 @@ layout: page
 baseurl: ../../
 base: about
 title: Equity in Athletics
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 ---
 
 {% include about-nav.html %}
