--- a/about/student-athletes/index.html
+++ b/about/student-athletes/index.html
@@ -3,6 +3,7 @@ layout: page
 baseurl: ../../
 base: about
 title: Student-Athlete Experience
+description: "At KCC, fostering student-athlete success in the classroom is paramount. The athletics department is doing all it can to ensure this success, for example the Athletics Study Lab."
 ---
 
 {% include about-nav.html %}
