--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -2,6 +2,7 @@
 layout: sub-nav-landing-fb
 baseurl: ../
 title: Men's Basketball
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 base: mens-basketball
 sport: 7
 slides:
@@ -103,7 +104,7 @@ slides:
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
-        	
+
 
     YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -123,7 +124,7 @@ slides:
             </div>
           </div>
         </div>
-      
+
      -->
 </section>
 <!-- Coaches Section -->
