--- a/news.html
+++ b/news.html
@@ -2,6 +2,7 @@
 layout: page
 baseurl: ../
 title: News
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 ---
 
 <section class="container sub-nav-marg">
