--- a/sports.html
+++ b/sports.html
@@ -2,7 +2,9 @@
 layout: landing
 baseurl: ../
 title: Sports
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 baseball_image: uploads/baseball-thumb.jpg
+description: "Kankakee Community College, a member of the National Junior College Athletic Association (NJCAA), has the following teams: men's baseball, basketball and soccer; women's softball, basketball and volleyball."
 ---
 
 <section class="sports-section" id="sports">
