--- a/support.html
+++ b/support.html
@@ -3,6 +3,7 @@ layout: landing
 baseurl: ../
 base: support
 title: Support Athletics
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 ---
 
 <!-- About-specific sub-nav -->
