--- a/support/cash-bash/index.html
+++ b/support/cash-bash/index.html
@@ -3,6 +3,7 @@ layout: page
 baseurl: ../../
 base: support
 title: Cash Bash
+description: "Cavalier Cash Bash will be Saturday, Feb. 16 from 6:30 - 11 p.m., at the Quality Inn, 800 N. Kinzie Ave., in Bradley. There will be 24 prize winners including a $5,000 grand prize."
 ---
 
 <!-- About-specific sub-nav -->
