--- a/support/cavalier-club/index.html
+++ b/support/cavalier-club/index.html
@@ -3,6 +3,7 @@ layout: page
 baseurl: ../../
 base: support
 title: Cavalier Club
+description: "The Cavalier Club promotes Kankakee Community College athletic programs and encourages involvement of the entire Community College District. You are contributing to the development of champions."
 ---
 
 <!-- About-specific sub-nav -->
