--- a/baseball/schedule/index.html
+++ b/baseball/schedule/index.html
@@ -2,6 +2,7 @@
 layout: schedule-page
 baseurl: ../../
 title: Baseball Schedule
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 sport: 2
 base: baseball
 ---
