--- a/facilities.html
+++ b/facilities.html
@@ -2,6 +2,7 @@
 layout: landing
 baseurl: ../
 title: Facilities
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 base: facilities
 ---
 
