--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -3,6 +3,7 @@ layout: page
 baseurl: ../../
 base: facilities
 title: Fitness Center
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 ---
 
 <!-- Facilities-specific sub-nav -->
