--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: landing-fb
 baseurl:
 title: Athletics
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 sport: 1
 slides:
   - image: uploads/header-bg2.jpg
