--- a/mens-basketball/roster/index.html
+++ b/mens-basketball/roster/index.html
@@ -2,6 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: "Men's Basketball Roster"
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 base: mens-basketball
 ---
 
