--- a/mens-basketball/schedule/index.html
+++ b/mens-basketball/schedule/index.html
@@ -2,6 +2,7 @@
 layout: schedule-page
 baseurl: ../../
 title: Men's Basketball Schedule
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 sport: 7
 base: mens-basketball
 ---
