--- a/recruitment.html
+++ b/recruitment.html
@@ -2,6 +2,7 @@
 layout: page
 baseurl: ../
 title: Recruitment
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 ---
 
 <!-- Recruitment Content -->
