--- a/soccer/schedule/index.html
+++ b/soccer/schedule/index.html
@@ -2,6 +2,7 @@
 layout: schedule-page
 baseurl: ../../
 title: Soccer Schedule
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 sport: 5
 base: soccer
 ---
