--- a/volleyball.html
+++ b/volleyball.html
@@ -2,6 +2,7 @@
 layout: sub-nav-landing-fb
 baseurl: ../
 title: Volleyball
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 base: volleyball
 sport: 4
 slides:
