--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -2,6 +2,7 @@
 layout: sub-nav-landing-fb
 baseurl: ../
 title: Women's Basketball
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 base: womens-basketball
 sport: 6
 slides:
