--- a/womens-basketball/schedule/index.html
+++ b/womens-basketball/schedule/index.html
@@ -2,6 +2,7 @@
 layout: schedule-page
 baseurl: ../../
 title: Women's Basketball Schedule
+description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 sport: 6
 base: womens-basketball
 ---
