Change page content's margin to accommodate sub-nav
(Swap <main>'s nav-marg for sub-nav-marg)

--- a/support/cash-bash/index.html
+++ b/support/cash-bash/index.html
@@ -29,7 +29,7 @@ description: "Cavalier Cash Bash will be Saturday, Feb. 16 from 6:30 - 11 p.m., 
   </div>
 </div>
 
-<main class="about-main nav-marg">
+<main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
