--- a/support/cavalier-club/index.html
+++ b/support/cavalier-club/index.html
@@ -29,7 +29,7 @@ description: "The Cavalier Club promotes Kankakee Community College athletic pro
   </div>
 </div>
 
-<main class="about-main nav-marg">
+<main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
