--- a/support/donate/index.html
+++ b/support/donate/index.html
@@ -29,7 +29,7 @@ description: "KCC offers intercollegiate men's basketball, women's basketball, b
   </div>
 </div>
 
-<main class="about-main nav-marg">
+<main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
