Cleanup HTML from CMS editing. Delete empty section with margin.

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -8,32 +8,27 @@ base: baseball
 
 <section class="container sub-nav-marg">
   <div class="row">
-      <div class="col-md-12">
-        <div class="editable">
-            <div class="row row-space">
-                <div class="col-md-12 text-center">
-                  <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">Baseball Stats on NJCAA Region 4 Website </a></span></p>
-                </div>
-                <div>
-                    <p class="present-before-paste">&nbsp;</p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Hitting.pdf">Career Hitting</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Pitching.pdf">Career Pitching</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Player Awards and Honors.pdf">Player Awards and Honors</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Pro Players and Form Cavs.pdf">Pro Players and Former Cavaliers</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Hitting.pdf">Season Hitting</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Pitching.pdf">Season Pitching</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Championships and Awards.pdf">Team Championships and Awards</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Hitting.pdf">Team Hitting</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Pitching.pdf">Team Pitching</a></p>
-                    <p class="present-before-paste">&nbsp;</p>
-                </div>
-            </div>
-        </div></div></div></section>
-
-
-
-
-
-
-
-<section class="container sub-nav-marg"></section>
+    <div class="col-md-12">
+      <div class="editable">
+        <div class="row row-space">
+          <div class="col-md-12 text-center">
+            <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">Baseball Stats on NJCAA Region 4 Website </a></span></p>
+          </div>
+          <div>
+            <p class="present-before-paste">&nbsp;</p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Hitting.pdf">Career Hitting</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Pitching.pdf">Career Pitching</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Player Awards and Honors.pdf">Player Awards and Honors</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Pro Players and Form Cavs.pdf">Pro Players and Former Cavaliers</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Hitting.pdf">Season Hitting</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Pitching.pdf">Season Pitching</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Championships and Awards.pdf">Team Championships and Awards</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Hitting.pdf">Team Hitting</a></p>
+            <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Pitching.pdf">Team Pitching</a></p>
+            <p class="present-before-paste">&nbsp;</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
