Create .coaches__col-bottom-margin class for consistent spacing of coach info...
Minor consistency adjustments for coaches section on mobile devices:

Add {margin-bottom: 20px} to each coach column. Coach thumbnail images are clickable links and needed a little spacing in mobile view.

The softball page, which contains 2 rows of coach info, had a margin between the two rows in mobile views.
This created an inconsistent look of 3 coaches with no bottom margins, followed by a single coach with a gap caused by a margin:
Removed the margin that was on the bottom row of coaches on the softball page.

--- a/soccer.html
+++ b/soccer.html
@@ -145,7 +145,7 @@ YouTube Modal
     <div class="row">
       <!-- Coach 1 -->
       <!-- Coach 1 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 1 row -->
         <div class="row">
           <!-- Coach 1 left image div (inner-left column) -->
@@ -162,7 +162,7 @@ YouTube Modal
       </div>
       <!-- Coach 2 -->
       <!-- Coach 2 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 2 row -->
         <div class="row">
           <!-- Coach 2 left image div (inner-left column) -->
@@ -177,7 +177,7 @@ YouTube Modal
       </div>
       <!-- Coach 3 -->
       <!-- Coach 3 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 3 row -->
         <div class="row">
           <!-- Coach 3 left image div (inner-left column) -->
