--- a/softball.html
+++ b/softball.html
@@ -140,7 +140,7 @@ slides:
     <div class="row">
       <!-- Coach 1 -->
       <!-- Coach 1 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 1 row -->
         <div class="row">
           <!-- Coach 1 left image div (inner-left column) -->
@@ -157,7 +157,7 @@ slides:
       </div>
       <!-- Coach 2 -->
       <!-- Coach 2 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 2 row -->
         <div class="row">
           <!-- Coach 2 left image div (inner-left column) -->
@@ -172,7 +172,7 @@ slides:
       </div>
       <!-- Coach 3 -->
       <!-- Coach 3 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
@@ -184,8 +184,8 @@ slides:
       </div>
     </div>
     <!-- second coach row -->
-    <div class="row coach-row-marg">
-      <div class="col-md-4">
+    <div class="row">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
