--- a/volleyball.html
+++ b/volleyball.html
@@ -140,7 +140,7 @@ slides:
     <div class="row">
       <!-- Coach 1 -->
       <!-- Coach 1 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 1 row -->
         <div class="row">
           <!-- Coach 1 left image div (inner-left column) -->
@@ -157,7 +157,7 @@ slides:
       </div>
       <!-- Coach 2 -->
       <!-- Coach 2 outer column -->
-      <div class="col-md-4">
+      <div class="col-md-4 coaches__col-bottom-margin">
         <!-- Coach 2 row -->
         <div class="row">
           <!-- Coach 2 left image div (inner-left column) -->
