--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -285,6 +285,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
+        <img src="/uploads/athorson.jpg" alt="Photo of Head Coach" class="img-fluid float-left coach-modal-img editable" />
         <h5 class="coach-name editable">Alex Thorson</h5>
         <h6 class="coach-title editable">Head Coach</h6>
     <br />
