Updated 'facilities.html' via CloudCannon

--- a/facilities.html
+++ b/facilities.html
@@ -81,7 +81,7 @@ base: facilities
       </div>
       <div class="col-md-8 facilities__text-margin">
         <p class="editable">
-            The KCC Fitness Center offers total body fitness to members of the community as well as KCC students. The 3,500 square-foot facility features state of the art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of options for various training goals
+            The KCC Fitness Center offers total body fitness to members of the community as well as KCC students. The 3,500 square-foot facility features state of the art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of options for various training goals.
         </p>
         <a href="{{site.baseurl}}/facilities/fitness-center/#personal-trainers" class="blue-link">Personal Trainers & Staff</a><br />
         <a href="{{site.baseurl}}/facilities/fitness-center/#membership" class="blue-link">Membership</a><br />
