Put non-breaking spaces between all coach names

--- a/soccer.html
+++ b/soccer.html
@@ -152,7 +152,7 @@ YouTube Modal
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-mbarclay-coach.jpg" alt="Photo of Head Coach Mike Barclay" class="img-fluid coach-img modal-link editable" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Mike Barclay</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Mike&#160;Barclay</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">815&#8209;802&#8209;8618<br />
             mbarclay@kcc.edu</p>
@@ -169,7 +169,7 @@ YouTube Modal
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-kjoseph-asst.jpg" alt="Photo of Assistant Coach Keion Joseph 'Cruz'" class="img-fluid coach-img modal-link editable" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Keion Joseph "Cruz"</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Keion&#160;Joseph&#160;"Cruz"</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
@@ -184,7 +184,7 @@ YouTube Modal
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" src="{{page.baseurl}}uploads/blank-male-avatar.jpg" width="105" height="140" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">James Ashby</h5>
+            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">James&#160;Ashby</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
           </div>
