--- a/volleyball.html
+++ b/volleyball.html
@@ -147,7 +147,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/17-syancy-coach.jpg" alt="Photo of Head Coach Stephenee Yancy" class="img-fluid coach-img modal-link editable" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Stephenee Yancy</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Stephenee&#160;Yancy</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">815&#8209;802&#8209;8608<br />
             syancy@kcc.edu</p>
