--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -164,7 +164,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link editable" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Casey Meister</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Casey&#160;Meister</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
