--- a/baseball.html
+++ b/baseball.html
@@ -150,7 +150,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link editable" title="Photo of Head Coach Todd Post" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd&#160;Post</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">
                 815‑802‑8616<br />
@@ -169,7 +169,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/bryce-shafer.jpg" alt="Photo of Assistant Coach Bryce Shafer" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach Bryce Shafer" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Bryce Shafer</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Bryce&#160;Shafer</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <p class="editable">
               815&#8209;802&#8209;8609<br />
