--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -150,7 +150,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" title="Photo of Alex Thorson" src="/uploads/athorson.jpg" width="300" height="400" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex&#160;Thorson</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">
                 815‑802‑8609<br />athorson@kcc.edu
@@ -168,7 +168,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" title="Assistant Coach" width="300" height="400" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Matt Neaville</h5>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Matt&#160;Neaville</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
