--- a/softball.html
+++ b/softball.html
@@ -147,7 +147,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="{{page.baseurl}}uploads/18-kcooper-coach.jpg" alt="Photo of Head Coach Keith Cooper" class="img-fluid coach-img modal-link editable" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Keith Cooper</h5>
+            <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Keith&#160;Cooper</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">815&#8209;802&#8209;8606<br />
             kcooper@kcc.edu</p>
@@ -164,7 +164,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
-              <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Heidi Senor</h5>
+              <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Heidi&#160;Senor</h5>
               <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
@@ -176,7 +176,7 @@ slides:
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Joe Powers</h5>
+            <a data-toggle="modal" href="#modalCoach3" class="modal-link"><h5 class="coach-name editable">Joe&#160;Powers</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach3">View Bio</a>
           </div>
@@ -190,7 +190,7 @@ slides:
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach4"><img src="{{page.baseurl}}uploads/blank-male-avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Coach" /></a></div>
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach4" class="modal-link">
-              <h5 class="coach-name editable">Charlie Riner</h5>
+              <h5 class="coach-name editable">Charlie&#160;Riner</h5>
               <h6 class="coach-title editable">Assistant Coach</h6>
             </a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach4">View Bio</a>
