Attempt at custom styles for CMS

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -4,6 +4,12 @@ baseurl: ../../
 base: facilities
 title: Fitness Center
 description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
+_options:
+  _block:
+    format: p h3
+    undo: true
+    redo: true
+    styles: /assets/css/content.css
 ---
 
 <!-- Facilities-specific sub-nav -->
