Change every occurance of h2.blue-heading to h3.blue-heading...
.blue-heading class was applied to both h2 and h3 elements
Changed all to h3.blue-heading for consistency and for use with CloudCannon CMS custom styles dropdown

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -6,7 +6,23 @@ title: Fitness Center
 description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 _options:
   _block:
-    format: p h3
+    format: p h2 h3
+    bold: true
+    italic: true
+    underline: true
+    subscript: true
+    superscript: true
+    indent: true
+    outdent: true
+    image: true
+    table: true
+    left: align-left
+    center: center-this-text
+    right: align-right
+    removeformat: true
+    link: true
+    numberedlist: true
+    bulletedlist: true
     undo: true
     redo: true
     styles: /assets/css/content.css
@@ -180,7 +196,7 @@ _options:
             <p>D - 17-19:59 hours</p>
             <p>F - 16:59 hours or less</p>
             <p>&nbsp;</p>
-            <h2 id="personal-trainers" name="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h2>
+            <h3 id="personal-trainers" name="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h3>
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
             <p><img width="655" height="250" src="/uploads/dsc-0173-home.jpg" /></p>
             <h5>Rates</h5>
@@ -241,7 +257,7 @@ _options:
             <p><strong>Francine Castongia</strong></p>
             <p>Fitness specialist<br />815-802-8610<br /><a href="mailto:fcastongia@kcc.edu">fcastongia@kcc.edu</a></p>
             <p>&nbsp;</p>
-            <h2 id="testimonials" name="testimonials" class="blue-heading link__offset">Testimonials</h2>
+            <h3 id="testimonials" name="testimonials" class="blue-heading link__offset">Testimonials</h3>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
             <p>Lamanda Garcia<em><br />&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</em></p>
             <p>Donna Schmidt<em><br />&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</em></p>
