Put space between Sports Facilities and Fitness Center content for Mobile device viewing
Spacing added via a couple media queries

--- a/facilities.html
+++ b/facilities.html
@@ -47,7 +47,7 @@ base: facilities
 
 <main class="facilities-container">
   <div class="container">
-    <div class="row">
+    <div class="row facilities__row--bottom-margin">
       <div class="col-md-4 img-wrapper">
         <a class="img-link" href="{{site.baseurl}}/facilities/sports-facilities">
           <div class="thumb-caption">
