Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -72,10 +72,10 @@ _options:
             <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
             <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
             <p>&nbsp;</p>
-            <h3 id="membership" name="membership" class="blue-heading link__offset">Become a Member</h3>
+            <h2 id="membership" name="membership" class="main-heading">Become a Member</h2>
             <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
             <h2>&nbsp;</h2>
-            <h5><strong>Membership Options</strong></h5>
+            <h3 class="blue-heading"><strong>Membership Options</strong></h3>
             <p>KCC offers the following membership packages to non-student members of the community.</p>
             <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
                 <tbody>
@@ -164,7 +164,7 @@ _options:
                 </tbody>
             </table>
             <p>&nbsp;</p>
-            <h5>Fitness Center for College Credit</h5>
+            <h3 class="blue-heading">Fitness Center for College Credit</h3>
             <p>You can earn college credit for working out. Your workout schedule is up to you. After an initial orientation, there are no set meeting times. Work out as often as you'd like.</p>
             <p>Cost</p>
             <p>The Fitness Center class is the cost of one semester of college credit plus a $20 course fee.</p>
@@ -196,7 +196,7 @@ _options:
             <p>D - 17-19:59 hours</p>
             <p>F - 16:59 hours or less</p>
             <p>&nbsp;</p>
-            <h3 id="personal-trainers" name="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h3>
+            <h2 id="personal-trainers" name="personal-trainers" class="main-heading">Personal Trainers and Staff</h2>
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
             <p><img width="655" height="250" src="/uploads/dsc-0173-home.jpg" /></p>
             <h5>Rates</h5>
@@ -230,7 +230,7 @@ _options:
                 </tbody>
             </table>
             <p>&nbsp;</p>
-            <h5><strong>Why Personal Training?</strong></h5>
+            <h3 class="blue-heading"><strong>Why Personal Training?</strong></h3>
             <p>Using a personal trainer will help you maximize your time and effort at the gym, giving you tremendous value.</p>
             <ul>
                 <li>Reach your fitness goals faster</li>
@@ -238,11 +238,11 @@ _options:
                 <li>Keep your workouts fresh and motivating</li>
                 <li>Save time with a thorough, pre-planned workout</li>
             </ul>
-            <h5><strong>Fitness Assessment</strong></h5>
+            <h3 class="blue-heading"><strong>Fitness Assessment</strong></h3>
             <p>A fitness assessment evaluates physical fitness components such as height, weight, body fat composition, resting heart rate, balance, muscle strength and endurance. Cost is $35.</p>
             <p>Questions/Appointments</p>
             <p>Contact Yvonne Mills, personal trainer manager</p>
-            <h5><strong>Staff</strong></h5>
+            <h3 class="blue-heading"><strong>Staff</strong></h3>
             <p><img width="200" height="250" src="/uploads/dsc-0659yvonne-mills.jpg" /></p>
             <p><strong>Yvonne Mills </strong>&nbsp;</p>
             <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
@@ -257,7 +257,7 @@ _options:
             <p><strong>Francine Castongia</strong></p>
             <p>Fitness specialist<br />815-802-8610<br /><a href="mailto:fcastongia@kcc.edu">fcastongia@kcc.edu</a></p>
             <p>&nbsp;</p>
-            <h3 id="testimonials" name="testimonials" class="blue-heading link__offset">Testimonials</h3>
+            <h2 id="testimonials" name="testimonials" class="main-heading">Testimonials</h2>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
             <p>Lamanda Garcia<em><br />&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</em></p>
             <p>Donna Schmidt<em><br />&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</em></p>
