--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -6,7 +6,7 @@ title: Fitness Center
 description: "KCC offers intercollegiate men's basketball, women's basketball, baseball, softball, men's soccer and volleyball. The Cavaliers compete in Region IV of the NJCAA."
 _options:
   _block:
-    format: p h2 h3
+    format: p
     bold: true
     italic: true
     underline: true
